--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,188 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@import url("https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;600;700&family=Balsamiq+Sans:wght@400;700&family=Cherry+Bomb+One&family=Cherry+Cream+Soda&family=Hind+Siliguri:wght@300;400;500;600;700&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300&display=swap");
+
+.ff-hindi {
+  font-family: "Hind Siliguri", sans-serif !important;
+}
+.ff-poppin {
+  font-family: "Poppins", sans-serif !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+  box-sizing: border-box;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  max-width: 1440px !important;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.featurend {
+  color: #232323;
+  font-feature-settings: "clig" off, "liga" off;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+}
+.w-100 {
+  width: 100%;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-right: -12px;
+  margin-left: -12px;
 }
 
-.App-link {
-  color: #61dafb;
+.explore {
+  max-width: 558px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 117.1%; /* 67.918px */
+  display: flex;
+  justify-content: center;
+}
+.po_relative {
+  position: relative;
+}
+.text_set {
+  position: absolute;
+  top: 15%;
+  left: 25%;
+  right: 25%;
+}
+.pding {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.b_radius {
+  border-radius: 25px;
+}
+.col-12 {
+  width: 100%;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.d_flex{
+  display: flex;
+}
+.align-items-center{
+  align-items: center;
+}
+.justify-content-center{
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card {
+  border-radius: 10px;
+  background: #f3f5f6;
+  box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0);
+}
+.concetti {
+  max-width: 370px;
+  color: #232323;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.dolor {
+  color: #9e3040;
+  font-feature-settings: "clig" off, "liga" off;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.pt_29 {
+  padding-top: 29px;
+}
+.pt_55 {
+  padding-top: 55px;
+}
+.d199 {
+  color: #686868;
+  font-feature-settings: "clig" off, "liga" off;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: strikethrough;
+}
+.btn_add {
+  padding: 8px 25px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: #232323;
+  border: none;
+}
+.add_text {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.align_all {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.pt_15 {
+  padding-top: 15px;
+}
+.pdng_card {
+  padding: 15px;
+}
+.pt_49{
+  padding-top: 49px;
+}
+
+@media (min-width: 1200px) {
+  .col-7 {
+    width: 58.33%;
+    padding-left: 12px;
+    padding-right: 12px;
   }
-  to {
-    transform: rotate(360deg);
+  .col-5 {
+    width: 41.66%;
+    padding-left: 12px;
+    padding-right: 12px;
   }
+  .text_set {
+    position: absolute;
+    top: 15%;
+    left: 20%;
+    right: 20%;
+  }
+}
+@media (min-width:768px) {
+  .col-6 {
+    width: 50%;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  .pt_50{
+    padding-top: 50px;
+  }
+  .pt_49{
+    padding-top: 0;
+  }
+  
 }
